[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Case.gd" type="Script" id=1]
[ext_resource path="res://Texture/icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.5, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="Case" type="KinematicBody2D" groups=["Case"]]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.407843, 0.223529, 0.0470588, 1 )
texture = ExtResource( 2 )

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -24.5, 0 )
z_index = -1
shape = SubResource( 1 )

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 24.5, 0 )
z_index = -1
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_exited" from="Left" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_exited" from="Right" to="." method="_on_Area_body_exited"]
